<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/bill_calculator"
        android:textSize="36sp" />

    <View
        android:layout_width="248dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"
       />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        app:srcCompat="@drawable/shocking_man_long_bill_cartoon_76766018" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/welcome_this_app_calculates_bills" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/amount"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="#000000" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="109dp"
            android:layout_height="45dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/num_of_pax"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/num_pax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/add_on"
            android:textColor="#000000"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/seriveCharge"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/no_svs"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/GST"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/gst"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/discount"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/payment"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <RadioButton
                android:id="@+id/payNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paynow" />

        </RadioGroup>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="11dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="1dp"
            />

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval"
            android:text="@string/split"
            android:textColor="#BDA55D"
            app:backgroundTint="#FDFD96" />

        <View
            android:layout_width="10dp"
            android:layout_height="1dp"
             />

        <Button
            android:id="@+id/Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval"
            android:text="@string/reset"
            android:textColor="#FF6961"
            android:textSize="14sp"
            app:backgroundTint="#F8C8DC" />

        <View
            android:layout_width="10dp"
            android:layout_height="1dp"
            />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"
        android:foregroundGravity="center|center_horizontal" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/totalCost"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/total_bill"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="20dp"
        android:layout_height="1dp"
        />

    <TextView
        android:id="@+id/paymentMethod"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/each_pays"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp" />

</LinearLayout>

